selector-go/knative-service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: devops-ex-selector-knative
spec:
  runLatest:
    configuration:
      revisionTemplate:
        spec:
          container:
            image: quay.io/literalice/selector-go:0.0.2
            env:
            - name: CANDIDATES
              value: "h-arkt,toshis_,MitsuguShingu,ymst1107,curry9999,baum204,tmogi,odoru99,snogami,yskida,kyohei-nakamura,YasuhisaOchiai,kawakamimanabu,dice_K247,fujisakih14,HIROCASTER,HirofumiHida,Gako-Sho,gashirar,Alice_You,s1g,shota0123art,sogaoh,kureb,kyohei_kitamura,raigodsk,yo12525,a2uky,kitayama_t,g40244,takumihashimoto,tantan03,nakanakashin,9106240715,greenteacat,ykhroki,hifujiwara,yagi_shinnosuke,uchy,kuroshun96,hnw,tom__bo_CS,k-murakata,MasakazuTakasho,bussorenre,sonots,y-uemura55,y_n [...]
