selector-go/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-ex-greeter
spec:
  hosts:
  - devops-ex-greeter
  http:
  - fault:
#      delay:
#        fixedDelay: 5s
#        percent: 60
#      abort:
#        httpStatus: 500
#        percent: 30
    route:
    - destination:
        host: devops-ex-greeter
        subset: v2
